# ephemeral_presentation

./: README.md  REFACTORING_SUMMARY.md  a2a_registry.py  listener.py  listener2.py  main.py  pyproject.toml  requirements.txt  test_sample_agent.py  usage_examples.py
agents/: basic_agent.py
deck/: deck.md
docs/: architecture_1.md  architecture_2.md
skeletons/: a2a_scenarios_for_tasks.py  a2a_skeleton_agent.py
src/: a2a_network.py  a2a_registry.py  a2a_server.py  assessor_agent.py  basic_agent.py  listener.py  llm_client.py
src/agents/: README.md  assessor_agent.py  basic_agent.py  sample_agent.py
